# nes

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  nes.cpp  nes.h
src/: byte.h  main.cpp  memory.h
src/cartridge/: cartridge.h  rom.h
src/console/: console.h
src/cpu/: cpu.h  instruction.cpp
src/memory/: memory.cpp  memory.h  segment.h  span.h
src/ppu/: ppu.h
